# segateway-router

./: .gitignore  Dockerfile  LICENSE  README.md
.github/workflows/: ci-main.yml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  config.yaml  deployment.yaml  hpa.yaml  scaledobject.yaml  secret.yaml  service.yaml  serviceaccount.yaml
etc/syslog-ng/: syslog-ng.conf
etc/syslog-ng/conf.d/common/destinations/: d_otlp.conf
etc/syslog-ng/conf.d/common/lib/: otel_body.conf  otel_timestamp.conf  otel_timestamp_observed.conf
etc/syslog-ng/conf.d/common/logpaths/: l_router.conf
etc/syslog-ng/conf.d/common/sources/: s_otlp.conf
etc/syslog-ng/conf.d/common/templates/: templates.conf
python/: config.yaml  dest_logscale.jinja  dest_logscale.py  dest_logscale.sh  pyproject.toml
